dbcp dependency 및 jinq stream 제거, datasource config 수정